--- a/static/css/settings-client.css
+++ b/static/css/settings-client.css
@@ -990,7 +990,7 @@
      /* Text color */
      font-size: 16px;
      /* Font size */
-     margin: 5px 0;
+     margin-top: 10px;
      /* Vertical spacing */
      white-space: nowrap;
      /* Prevent wrapping */
@@ -1006,7 +1006,7 @@
 
 
  body.dark .preview-name {
-     color: #fff;
+     color: #a1a3a5;
      /* Cambié a blanco */
  }
 
@@ -1016,10 +1016,8 @@
  /* Estilizar la información adicional (como el teléfono, etc.) */
  .preview-phone {
      color: #333;
-     /* Text color */
-     font-size: 14px;
+     font-size: 0.7em;
      /* Font size */
-     margin: 5px 0;
      /* Vertical spacing */
      text-align: left;
      /* Align text to the right */
@@ -1102,7 +1100,7 @@
      /* Border around the card */
      border-radius: 8px;
      /* Rounded edges */
-     padding: 16px;
+     padding: 23px;
      /* Inner spacing */
      margin-top: 16px;
      /* Top spacing */
@@ -1180,8 +1178,6 @@
      cursor: pointer;
      /* Cambia el cursor al pasar el ratón */
  }
-
-
 
 
  body.dark .form-group select {
