--- a/templates/work.html
+++ b/templates/work.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../static/css/main.css">
     <link rel="stylesheet" href="../static/css/scrollbar.css">
     <link rel="stylesheet" href="../static/css/work.css">
+    <link rel="stylesheet" href="../static/css/flash.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -80,9 +81,22 @@
         </div>
     </nav>
 
-        
+<section class="home">
 
-    <section class="home">
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+<div class="flash-messages">
+    {% for message in messages %}
+    <div class="flash-message">
+        <i class="fa-solid fa-circle-exclamation" style="margin-right: 8px;"></i> <!-- Ícono de información -->
+        {{ message }}
+    </div>
+    {% endfor %}
+</div>
+{% endif %}
+{% endwith %}
+
+
         <div class="home-header" style="padding-right: 5%;">
             <div class="back-button">
                 <a href="/home" class="back-btn">
@@ -107,16 +121,7 @@
             </div>
         </div>
 
-        <!-- Mensajes Flash -->
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-        <div class="flash-messages">
-            {% for message in messages %}
-            <div class="flash-message">{{ message }}</div>
-            {% endfor %}
-        </div>
-        {% endif %}
-        {% endwith %}
+
         <div class="card">
             <div class="card-header">
             <h2>{{ details[0] }}</h2>
@@ -287,6 +292,7 @@
             <script src="../static/js/work.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.0/socket.io.js"></script>
             <script src="../static/js/send-notifications.js"></script>
+            <script src="../static/js/flash.js"></script>
         </div>
         <input type="hidden" id="id" value="{{nor}}">
         <input type="hidden" id="user" value="{{user[0]}}">
