PRACTICAMENTE TODO LISTO

--- a/static/css/flash.css
+++ b/static/css/flash.css
@@ -20,6 +20,8 @@
     opacity: 0; /* Inicialmente invisible */
     transform: translateY(-30px); /* Comienza un poco más arriba */
     transition: opacity 0.5s ease, transform 0.5s ease; /* Efecto de transición */
+    text-align: center;
+    font-size: 15px;
 }
 
 .flash-message.show {
