--- a/templates/work.html
+++ b/templates/work.html
@@ -261,7 +261,9 @@
                                 </button>
 
                                 {% if user[1] != "Administrator" %}
-                            <!-- No mostrar nada -->
+                                <!-- No mostrar nada -->
+                                {%elif details[10]==1 %}
+                                <!-- No mostrar nada -->
                                 {% else %}
                                 <button class="status-button rejected" id="rejected" type="button" onclick="setStatus('canceled', this)">
                                     Rechazado
@@ -274,18 +276,23 @@
                         </div>
                     </div>
                 </div>
-                
-                
-                
-            <div class="confirmation-modal hidden" id="confirmationModal">
-                <div class="modal-content">
-                    <h3>¿Estás seguro de su decisión?</h3>
-                    <div class="modal-actions">
-                        <button id="confirmDelete" class="confirm-btn">Sí</button>
-                        <button id="cancelDelete" class="cancel-btn">Cancelar</button>
+                <div class="confirmation-modal hidden" id="confirmationModal">
+                    <div class="modal-content">
+                        <h3>¿Estás seguro de su decisión?</h3>
+                        {% if details[10] == 1 %}
+                            <p>Ingrese el nombre del archivo CDR con el diseño del trabajo</p><br>
+                            <input type="file" id="designFile" placeholder="ingresa el nombre del archivo de diseño .CDR" value="" required>
+                        {%else%}
+                             <!-- No mostrar nada -->
+                        {%endif%}
+                        <div class="modal-actions">
+                            <button id="confirmDelete" class="confirm-btn">Sí</button>
+                            <button id="cancelDelete" class="cancel-btn">Cancelar</button>
+                        </div>
                     </div>
                 </div>
-            </div>
+                
+
             <script src="../static/js/roles.js"></script>
             <script src="../static/js/home.js"></script>
             <script src="../static/js/sidebar.js"></script>
@@ -296,6 +303,7 @@
         </div>
         <input type="hidden" id="id" value="{{nor}}">
         <input type="hidden" id="user" value="{{user[0]}}">
+        <input type="hidden" id="phase" value="{{details[10]}}">
         <iframe name="response_frame" style="border: none; width: 100%; height: 50px;"></iframe>
     </section>
 </body>
