--- a/static/css/notifications.css
+++ b/static/css/notifications.css
@@ -440,8 +440,8 @@ body.dark .home .text {
 }
 
 .dataTables_wrapper .dataTables_paginate .paginate_button:hover {
-    background-color: #f1f1f1; /* Fondo al hover en modo claro */
-    border-color: #aaa; /* Color de borde al hover */
+    background: linear-gradient(45deg, #181717, #1e1c1c); 
+    color: #ffffff !important; /* Color de borde al hover */
 }
 
 #example thead th {
@@ -470,7 +470,79 @@ body.dark .home .text {
 
 .dataTables_wrapper .dataTables_paginate .paginate_button.current,
 .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
-    color: #333 !important; /* Color activo */
-    background-color: white; /* Fondo activo */
+    color: #ffffff !important; /* Color activo */
+    background: linear-gradient(45deg, #181717, #1e1c1c)
 }
 
+
+/* Modo oscuro */
+.dark-mode .card {
+    background-color: #1c1c1c; /* Fondo oscuro */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.dark-mode #example {
+    color: #ddd; /* Texto claro en modo oscuro */
+}
+
+.dark-mode #example thead {
+    background-color: #4b47b3; /* Encabezado oscuro */
+}
+
+.dark-mode #example tbody tr{
+    background-color: #2a2a2a; /* Filas pares oscuras */
+}
+.dark-mode #example tbody tr .sorting_1 {
+    background-color: #2a2a2a; /* Hover oscuro */
+}
+ 
+.dark-mode #example tbody tr:nth-child(even) {
+    background-color: #333333; /* Filas pares oscuras */
+}
+
+.dark-mode #example tbody tr:nth-child(even) .sorting_1 {
+    background-color: #333333; /* Filas pares oscuras */
+}
+
+.dark-mode #example tbody tr:hover {
+    background-color: #444; /* Hover oscuro */
+}
+
+.dark-mode #example tbody tr:hover .sorting_1 {
+    background-color: #444; /* Hover oscuro */
+}
+
+.dark-mode .dataTables_wrapper .dataTables_paginate .paginate_button {
+    border: 1px solid #444; /* Borde oscuro */
+}
+
+.dark-mode .dataTables_wrapper .dataTables_paginate .paginate_button:hover {
+    background: linear-gradient(45deg, #ffffff, #ffffff);   
+    color: #000000 !important; /* Color de borde al hover */
+}
+
+.dark-mode .dataTables_wrapper .dataTables_filter input {
+    border: 1px solid #444; /* Borde del input oscuro */
+}
+
+.dark-mode .dataTables_wrapper .dataTables_length,
+.dark-mode.dataTables_wrapper .dataTables_filter,
+.dark-mode .dataTables_wrapper .dataTables_info,
+.dataTables_wrapper .dataTables_length select,
+.dark-mode .dataTables_wrapper .dataTables_filter input {
+    color: #ccc; /* Texto en modo oscuro */
+}
+
+.dark-mode .dataTables_wrapper .dataTables_paginate .paginate_button.current,
+.dark-mode .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
+    color: #000000 !important; /* Texto activo en modo oscuro */
+    background: linear-gradient(45deg, #ffffff, #ffffff); 
+}
+
+.dark-mode .dataTables_wrapper .dataTables_length select {
+    border: 1px solid #aaa;
+    border-radius: 3px;
+    padding: 5px;
+    background-color: #2a2a2a;
+    padding: 4px;
+}
