--- a/static/css/settings.css
+++ b/static/css/settings.css
@@ -429,27 +429,40 @@ body.dark .setting-option i {
     color: #ccc; /* Color del icono en modo oscuro */
 }
 
-.grid-container {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr); 
-    gap: 2px;
-    padding: 10px;
-    width: 80%; 
-    margin: 0 auto; 
-    margin-bottom: 20px;
+/* Contenedor principal para centrar toda la grid */
+body, html {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
 }
 
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr); /* 4 columnas */
+    gap: 10px;
+    width: 60%; /* Ajusta el ancho de la grid */
+    box-sizing: border-box; /* Para incluir el padding en el ancho total */
+}
+
+/* Estilos de los ítems */
 .grid-item {
-    background-color: #f5f5f5; /* Color de fondo en modo claro */
-    color: #333; /* Color del texto en modo claro */
-    padding: 10px;
+    background-color: #f5f5f5;
+    color: #333;
+    padding: 20px;
     text-align: center;
     transition: background-color 0.3s, transform 0.3s;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .grid-item:hover {
-    background-color: #e0e0e0; /* Color de fondo al pasar el mouse en modo claro */
+    background-color: #e0e0e0;
+    transform: scale(1.05);
 }
+
 
 /* Estilos para la tabla en modo oscuro */
 body.dark .grid-item {
@@ -484,8 +497,8 @@ body.dark .grid-item:hover {
 
 .container {
     display: flex;
-    justify-content: center; /* Centra horizontalmente */
-    align-items: center; /* Centra verticalmente */
+    justify-content: center; /* Centra todo horizontalmente */
+    align-items: center;     /* Centra todo verticalmente */
 }
 
 .select-container {
