--- a/templates/settings-record.html
+++ b/templates/settings-record.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </head>
 <body>
     <nav class="sidebar close">
@@ -27,8 +30,8 @@
             <i class='bx bx-chevron-right toggle'></i>
         </header>
         <div class="menu-bar">
-            <div class="menu">
-                <ul class="menu-links">
+            <div class="menu" >
+                <ul class="menu-links" style="padding-left: 0rem !important;">
                     <li class="nav-link">
                         <a href="{{ url_for('home') }}">
                             <i class='bx bx-home-alt icon'></i>
@@ -43,7 +46,7 @@
                     </li>
                 </ul>
                 <hr class="separator">
-                <ul class="menu-links">
+                <ul class="menu-links" style="padding-left: 0rem !important;">
                     <li class="nav-link" id="diseño">
                         <a href="{{ url_for('design') }}">
                             <i class='bx bx-image-alt icon'></i>
@@ -107,36 +110,53 @@
                 </div>
             </div>
         </div>
-        <form action="{{ url_for('create_record') }}" target="response_frame" method="POST">
-            <div class="container">
-                <div class="select-container" id="existing-user-select">
-                    <select class="select" id="select-client" name="client" onchange="autocompleteUser()">
-                        <option value="">Seleccione un cliente</option>
-                        {% for names, numbers in clients %}
-                        <option value="{{ names[0] }} {{ names[1] }}" data-name="{{ names[0] }}" data-surname="{{ names[1] }}" data-phone="{{numbers[0]}}">
-                            {{ names[0] }} {{ names[1] }}
-                        </option>
-                        {% endfor %}
-                    </select>
-                </div>            
-                <div class="select-container">
-                    <input type="week" id="date" name="date" class="select-date">
-                    <button id="updateButton" class="button" type="button">Cargar</button>
+        
+
+        <div class="container">
+            <form action="{{ url_for('create_record') }}" target="response_frame" method="POST">
+                <div class="row">
+                    <div class="col-md-12 w-100 d-flex justify-content-start mb-4">
+                        <div class="select-container" id="existing-user-select">
+                            <select class="select" id="select-client" name="client" onchange="autocompleteUser()">
+                                <option value="">Seleccione un cliente</option>
+                                {% for names, numbers in clients %}
+                                <option value="{{ names[0] }} {{ names[1] }}" data-name="{{ names[0] }}" data-surname="{{ names[1] }}" data-phone="{{numbers[0]}}">
+                                    {{ names[0] }} {{ names[1] }}
+                                </option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                        <div class="select-container">
+                            <input type="week" id="date" name="date" class="select-date">
+                            <button id="updateButton" class="button" type="button">Cargar</button>
+                        </div>
+                    </div>                
                 </div>
-            </div>
-            <div class="grid-container">
-                {% for item in filas %}
-                    {% for item2 in item %}
-                        <div class="grid-item">{{ item2 }}</div>
-                    {% endfor %}
-                {% endfor %}
-            </div>
-            <div class="button-container">
-                <button class="submit-button" type="submit" id="saveButton">Guardar</button>
-            </div>
-        </form>
+                <div class="row">
+                    <div class="col-md-12 w-100 d-flex justify-content-start mb-4">
+                        <div class="grid-container">
+                            <div class="grid-container">
+                                {% for item in filas %}
+                                    {% for item2 in item %}
+                                        <div class="grid-item">{{ item2 if item2 else ' ' }}</div>
+                                    {% endfor %}
+                                {% endfor %}
+                            </div>                
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="row">
+                    <div class="col-md-12 w-100 d-flex justify-content-start">
+                        <div class="button-container">
+                            <button class="submit-button" type="submit" id="saveButton">Guardar</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
                     
-        <iframe name="response_frame" style="border:none; width:100%; height:50px;"></iframe>
+
     
     </section>
     <script src="../static/js/settings-record.js"></script>
