--- a/static/css/style.css
+++ b/static/css/style.css
@@ -787,15 +787,14 @@ input[type="checkbox"]:checked + label.custom-checkbox {
 }
 
 .info {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  width: 320px;
-  padding: 12px;
+  width: 450px;
+  padding: 15px;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: start;
-  background: linear-gradient(90deg, rgba(149,88,146,1) 0%, rgba(74,74,200,1) 100%, rgba(0,212,255,1) 100%);
-  border-radius: 8px;
+  background: radial-gradient(circle, rgba(110,97,254,1) 0%, rgba(127,89,198,1) 100%);
+  border-radius: 50px;
   box-shadow: 0px 0px 5px -3px #111;
   position: absolute;
   top: -50px; /* Posición inicial fuera de la pantalla */
